test/fail/actor-reference-infer.mo
// actor references

let _ = actor "bfozs-kwa73-7nadi";  // cannot infer
